# docs/openapi3.yaml
@@ -80,8 +80,12 @@ paths:
             schema:
               $ref: '#/components/schemas/Player'
       responses:
-        '201':
+        '200':
           description: game response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
         default:
           description: unexpected error
           content:
@@ -162,8 +166,12 @@ paths:
             schema:
               $ref: '#/components/schemas/NewGame'
       responses:
-        '201':
+        '200':
           description: game response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
         default:
           description: unexpected error
           content:
@@ -193,8 +201,12 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedGame'
       responses:
-        '201':
-          description: game response
+        '200':
+          description: changed game
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Game'
         default:
           description: unexpected error
           content:
